--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<h1 ><i id='playCount'></i> Songs played today<h1>
 	<h1 id='subTitle'></h1>
 </div>
+<h1>Score: <b id='score'></b></h1>
 <div id='tweets'></div>
 <div id='lastFMshouts'></div>
 </body>
